Mon Feb 22 20:57:32 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * tools/odds_dissector/colorfilters:

          Updated syntax to match that of built-in filters.

Sun Feb 21 22:09:46 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * performance-tests/Bench/bin/plot-transports-scaling.gp:

          Reverted changes introduced by previous commit.

Sun Feb 21 19:47:46 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * performance-tests/Bench/bin/plot-transports-scaling.gp:

          Updated output image size.

Sun Feb 21 05:20:25 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/multicast/ReliableSession.h:
        * dds/DCPS/transport/multicast/ReliableSession.cpp:

          Switched from ACE_SYNCH_RW_MUTEX to ACE_SYNCH_MUTEX; there
          is no longer any benefit to using a RW mutex here.

Sun Feb 21 05:13:53 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/multicast/ReliableSession.cpp:

          Reduced lock scopes; reverted change made in r3050 which
          prevented the NACK mechanism from triggering properly.

Sun Feb 21 04:44:54 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/multicast/ReliableSession.cpp:

          Corrected locking behavior in start.

Sun Feb 21 02:41:30 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * tools/odds_dissector/README:

          Clarified language concerning color filter ordering.

Sat Feb 20 16:29:31 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * performance-tests/Bench/bin/plot-transports-scaling.gp:

          Updated output image size.

Sat Feb 20 04:51:30 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * performance-tests/Bench/tools/convert-all:

          Added missing bash interpreter directive.

        * performance-tests/Bench/bin/plot-transports-scaling.gp:
        * performance-tests/Bench/tools/convert-scaling: